# OxiVault

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
src/encrypt/: mod.rs  passwd.rs
