[package]
name = "oxivault"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.56", features = ["derive"] }
crypto-common = "0.1.7"
rpassword = "7.4.0"
shellexpand = "3.1.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
